--- a/MyMoney/app/src/main/res/values/strings.xml
+++ b/MyMoney/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="gifts">Подарки</string>
+    <string name="title_activity_editing_income">EditingIncomeActivity</string>
+    <string name="title_activity_editing_spending">EditingSpendingActivity</string>
 </resources>
