editing finance object

--- a/MyMoney/app/src/main/res/values/strings.xml
+++ b/MyMoney/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="gifts">Подарки</string>
     <string name="title_activity_editing_income">EditingIncomeActivity</string>
     <string name="title_activity_editing_spending">EditingSpendingActivity</string>
+    <string name="title_activity_editinig_finance_obj">EditinigFinanceObjActivity</string>
 </resources>
